--- a/OnlineClothesStore/Views/Shared/_Layout.cshtml
+++ b/OnlineClothesStore/Views/Shared/_Layout.cshtml
@@ -5,61 +5,171 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Guaranteed Clothes</title>
     <link href="~/Content/css/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.8.3.js"></script>
+    <link href="~/Content/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    @*Navigation*@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#page-top"><img src="~/Images/logo.svg" width="128" alt="..." /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="~/Home/Index"><img src="~/Images/logo.svg" width="128" height="64" alt="..." /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav me-auto">
+            @*Navbar items*@
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            Home
-                            <span class="visually-hidden">(current)</span>
-                        </a>
+                        <a class="nav-link font-weight-bold" href="#">NEW</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link font-weight-bold" href="#">CLOTHING</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <a class="nav-link dropdown-toggle font-weight-bold" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">GENDER</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Men</a>
+                            <a class="dropdown-item" href="#">Women</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle font-weight-bold" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CATEGORY</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">T-shirts</a>
+                            <a class="dropdown-item" href="#">Jeans</a>
+                            <a class="dropdown-item" href="#">Hoodies</a>
+                            <a class="dropdown-item" href="#">Jackets</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-weight-bold text-danger" href="#">SALE</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa-solid fa-user-tie fa-xl"></i>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Register Seller</a>
+                            <a class="dropdown-item" href="#">Update Seller</a>
                             <a class="dropdown-item" href="#">Something else here</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
+                            <a class="dropdown-item" href="#">Buyer</a>
                         </div>
                     </li>
                 </ul>
+                @*Search bar*@
                 <form class="d-flex">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
                     <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="body-content mx-4">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Guaranteed Clothes</p>
-        </footer>
     </div>
-
-    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    @*Footer*@
+    <footer class="text-center text-lg-start bg-light text-muted">
+        @*Social Media Section*@
+        <section class="d-flex justify-content-center p-3 border-bottom">
+            <div class="me-3 d-none d-lg-block">
+                <span>Get connected with us on social networks:</span>
+            </div>
+            <div>
+                <a href="#" class="ml-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#" class="ml-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" class="ml-4 text-reset">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="#" class="ml-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" class="ml-4 text-reset" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/hooniec" class="ml-4 text-reset">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </section>
+        @*Links Section*@
+        <section class="">
+            <div class="container text-center text-md-start mt-2">
+                <div class="row mt-3">
+                    @*Grid Column*@
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-2">
+                        <h6 class="text-uppercase fw-bold mb-3">
+                            <i class="fas fa-gem me-3"></i>Guaranteed Clothes
+                        </h6>
+                        <p>
+                            We pride ourselves on delivering good quality and stylish clothing for men and women. 
+                            Quality and style are very important to us here at Guaranteed Clothes.
+                        </p>
+                    </div>
+                    @*Grid Column*@
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-2">
+                        <h6 class="text-uppercase fw-bold mb-3">
+                            Products
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">T-shirts</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Jeans</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Hoodies</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Jackets</a>
+                        </p>
+                    </div>
+                    @*Grid Column*@
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-2">
+                        <h6 class="text-uppercase fw-bold mb-3">
+                            Useful links
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">Pricing</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Settings</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Orders</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Help</a>
+                        </p>
+                    </div>
+                    @*Grid Column*@
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-2">
+                        <h6 class="text-uppercase fw-bold mb-3">
+                            Contact
+                        </h6>
+                        <p><i class="fas fa-home me-3"></i> Wellington, NZ</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            info@guaranteed.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 64 021 567 88</p>
+                        <p><i class="fas fa-print me-3"></i> + 64 021 567 89</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        @*Copyright*@
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            <p>&copy; @DateTime.Now.Year - Guaranteed Clothes, All Rights Reserved.</p>
+        </div>
+    </footer>
+    @*Scripts*@
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="~/Content/js/bootstrap.bundle.js"></script>
+    <script src="~/Content/js/bootstrap.js"></script>
+    <script src="https://kit.fontawesome.com/7375b609fc.js" crossorigin="anonymous"></script>
 </body>
 </html>
