--- a/OnlineClothesStore/Views/Shared/_Layout.cshtml
+++ b/OnlineClothesStore/Views/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
                                 <i class="fa-solid fa-user-tie fa-xl"></i>
                             </a>
                             <div class="dropdown-menu">
+                                <a class="dropdown-item" href="~/Sellers/Edit/@Session["SellerId"]">My Profile</a>
                                 <a class="dropdown-item" href="~/Clothes/Create">Register Clothes</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="~/Sellers/Logout">Logout</a>
