--- a/OnlineClothesStore/Views/Sellers/Create.cshtml
+++ b/OnlineClothesStore/Views/Sellers/Create.cshtml
@@ -6,71 +6,72 @@
 
 <h4 class="text-center my-4">Become a Seller</h4>
 
+<div class="signin-form mb-5">
+    <div class="cotainer">
+        <div class="row justify-content-center">
+            @*Signup card*@
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">Sign Up</div>
+                    <div class="card-body">
+                        @using (Html.BeginForm("Create", "Sellers", FormMethod.Post))
+                        {
+                            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <div class="mb-5">
-        <div class="cotainer">
-            <div class="row justify-content-center">
-                @*Signup card*@
-                <div class="col-md-8">
-                    <div class="card">
-                        <div class="card-header">Sign Up</div>
-                        <div class="card-body">
-                            <form action="~/Sellers/Create" method="POST">
-                                <div class="form-group row">
-                                    <label for="name" class="col-md-4 col-form-label text-md-right">Name</label>
-                                    <div class="col-md-6">
-                                        <input type="text" id="name" class="form-control" name="name" maxlength="30" required autofocus>
-                                    </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="form-group row">
-                                    <label for="address" class="col-md-4 col-form-label text-md-right">Address</label>
-                                    <div class="col-md-6">
-                                        <input type="text" id="address" class="form-control" name="address" maxlength="100" required autofocus>
-                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="form-group row">
-                                    <label for="phone" class="col-md-4 col-form-label text-md-right">Phone</label>
-                                    <div class="col-md-6">
-                                        <input type="text" id="phone" class="form-control" name="phone" maxlength="20" required autofocus>
-                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="form-group row">
-                                    <label for="email" class="col-md-4 col-form-label text-md-right">Email</label>
-                                    <div class="col-md-6">
-                                        <input type="email" id="email" class="form-control" name="email" maxlength="30" required autofocus>
-                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => Model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="form-group row">
-                                    <label for="username" class="col-md-4 col-form-label text-md-right">Username</label>
-                                    <div class="col-md-6">
-                                        <input type="text" id="username" class="form-control" name="username" maxlength="20" required autofocus>
-                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="form-group row">
-                                    <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                                    <div class="col-md-6">
-                                        <input type="password" id="password" class="form-control" name="password" maxlength="30" required>
-                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
+                                <div class="col-md-6">
+                                    @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                 </div>
-                                <div class="col-md-6 offset-md-4">
-                                    <button type="submit" class="btn btn-secondary">
-                                        Sign Up
-                                    </button>
-                                    <a href="~/Sellers/Login" class="btn btn-link">
-                                        Already a seller?
-                                    </a>
-                                </div>
-                            </form>
-                        </div>
+                            </div>
+                            <div class="col-md-6 offset-md-4">
+                                <button type="submit" class="btn btn-secondary mr-3">Sign Up</button>
+                                @Html.ActionLink("Already a seller?", "Login", "Sellers")
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
         </div>
     </div>
-}
+</div>
+
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
