Updated search views and actions

--- a/OnlineClothesStore/Views/Clothes/Create.cshtml
+++ b/OnlineClothesStore/Views/Clothes/Create.cshtml
@@ -56,8 +56,8 @@
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "col-md-4 col-form-label text-md-right" })
                                 <div class="col-md-6 btn-group">
-                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Gender, "Male", new { @class = "btn-check", @autocomplete = "off" })Male</label>
-                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Gender, "Female", new { @class = "btn-check" })Female</label>
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Gender, "Men", new { @class = "btn-check", @autocomplete = "off" })Men</label>
+                                    <label class="btn btn-secondary">@Html.RadioButtonFor(model => model.Gender, "Women", new { @class = "btn-check" })Women</label>
                                 </div>
                                 @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "col-md-12 text-danger text-center" })
                             </div>
